docker/simple-mongodb-connection-tester/simple-mongodb-connection-tester.yaml
apiVersion: v1
kind: Pod
metadata:
  name: simple-mongodb-connection-test 
  labels:
    purpose: demonstration
spec:
  containers:
  - name: connection-tester
    image: jmimick/simple-mongodb-connection-tester
    args: ["$(CONNECTION_STRING)"]
  restartPolicy: OnFailure
