docker/simple-mongodb-connection-tester/simple-istio-mongodb-egress-srv.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: simple-mongodb-connection-tester 
spec:
  hosts:
  - docker-1cihx.gcp.mongodb.net
  ports:
  - number: 27017
    name: mongodb
    protocol: TCP
  resolution: NONE
